fix issues with user reactions
