# internal/controller/http/v1/handlers/posts/feed.go
@@ -11,41 +11,41 @@ import (
 	"net/http"
 )
 
-type timelineRoute struct {
+type feedRoute struct {
 	usersService userservice.User
 	postsService posts.Post
 	logger       logger.Interface
 	mapper       mappers.PostMapper
 }
 
-func NewTimelineRoute(handler *gin.RouterGroup, u userservice.User, p posts.Post, l logger.Interface, m mappers.PostMapper) {
-	c := &timelineRoute{u, p, l, m}
+func NewFeedRoute(handler *gin.RouterGroup, u userservice.User, p posts.Post, l logger.Interface, m mappers.PostMapper) {
+	c := &feedRoute{u, p, l, m}
 
-	handler.GET("/timeline", c.get)
+	handler.GET("/posts/feed", c.get)
 }
 
-type getTimelineRequest struct {
+type getFeedRequest struct {
 	Page  *int `form:"page" json:"page"`
 	Limit *int `form:"limit" json:"limit"`
 }
 
-type getTimelineResponse struct {
-	Status string            `json:"status"`
-	Data   dtos.PagedContent `json:"data"`
+type getFeedResponse struct {
+	Status string          `json:"status"`
+	Data   dtos.PagedPosts `json:"data"`
 }
 
-// @Summary     Get Timeline
-// @Description Get session user's timeline
-// @ID          get-timeline
+// @Summary     Get Posts Feed
+// @Description Get session user's feed
+// @ID          get-posts-feed
 // @Tags        Posts
 // @Accept      json
 // @Produce     json
-// @Param       request query    getTimelineRequest true "get user timeline"
-// @Success     200     {object} getTimelineResponse
+// @Param       request query    getFeedRequest true "get user timeline"
+// @Success     200     {object} getFeedResponse
 // @Security    Bearer
-// @Router      /timeline [get]
-func (r *timelineRoute) get(c *gin.Context) {
-	var request getTimelineRequest
+// @Router      /posts/feed [get]
+func (r *feedRoute) get(c *gin.Context) {
+	var request getFeedRequest
 
 	if err := c.ShouldBindQuery(&request); err != nil {
 		r.logger.Error(err, "http - v1 - timeline - get")
@@ -63,7 +63,7 @@ func (r *timelineRoute) get(c *gin.Context) {
 	}
 
 	ctx := c.Request.Context()
-	_, err = r.postsService.GetAll(ctx, sessionUser.ID, request.Page, request.Limit)
+	feed, err := r.postsService.GetFeed(ctx, sessionUser.ID, request.Page, request.Limit)
 	if err != nil {
 		r.logger.Error(err, "http - v1 -  timeline - get")
 		handlers.HTTPError(c, http.StatusInternalServerError, "unable to get timeline")
@@ -71,7 +71,8 @@ func (r *timelineRoute) get(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, getTimelineResponse{
+	c.JSON(http.StatusOK, getFeedResponse{
 		Status: "success",
+		Data:   *feed,
 	})
 }
